// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserContentUI .init clicks on new projects switch the project 1`] = `
"
  
  

  
    <title>This is a new document</title>
  

  
    <main>
      <div data-hide-when-logged-in=\\"\\" class=\\"d-none\\">This should be hidden after page load</div>
      
      <div class=\\"py-1 px-2 text-white\\" data-user-content-switcher=\\"\\">
        <small>Showing<span class=\\"d-none d-sm-inline\\"> configuration for</span></small>
        <div data-user-content-switcher-mount=\\"\\">
    <div class=\\"dropdown\\">
      <a class=\\"dropdown-toggle\\" href=\\"#\\" role=\\"button\\" data-toggle=\\"dropdown\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-not-dynamic=\\"\\">
        test2 / test2
      </a>

      <div class=\\"dropdown-menu user-content-menu\\" aria-hidden=\\"true\\">
      <h6 class=\\"dropdown-header\\">test1</h6><a href=\\"#\\" class=\\"dropdown-item\\" data-id=\\"1\\">test1 / test1</a><a href=\\"#\\" class=\\"dropdown-item active\\" data-id=\\"2\\">test2 / test2</a>
      </div>
    </div>
  </div>
      </div>
    <pre><code>This is a basic example: <span data-user-content=\\"PUBLIC_DSN\\">https://test2@sentry.io/test2</span></code></pre>
      <pre><code>This example should not be wrapped</code></pre><code>
    </code></main><code>
  

  
</code>"
`;

exports[`UserContentUI .init rewraps after page update 1`] = `
"
  
  

  
    <title>This is a new document</title>
  

  
    <main>
      <div data-hide-when-logged-in=\\"\\">This should be hidden after page load</div>
      <pre><code>This is a basic example: ___PUBLIC_DSN___</code></pre>
      <pre><code>This example should not be wrapped</code></pre><code>
    </code></main><code>
  

  
</code>"
`;

exports[`UserContentUI .init rewraps after page update 2`] = `
"
  
  

  
    <title>This is a new document</title>
  

  
    <main>
      <div data-hide-when-logged-in=\\"\\">This should be hidden after page load</div>
      
      <div class=\\"py-1 px-2 text-white\\" data-user-content-switcher=\\"\\">
        <small>Showing<span class=\\"d-none d-sm-inline\\"> configuration for</span></small>
        <div data-user-content-switcher-mount=\\"\\">
    <div class=\\"dropdown\\">
      <a class=\\"dropdown-toggle\\" href=\\"#\\" role=\\"button\\" data-toggle=\\"dropdown\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-not-dynamic=\\"\\">
        test2 / test2
      </a>

      <div class=\\"dropdown-menu user-content-menu\\" aria-hidden=\\"true\\">
      <h6 class=\\"dropdown-header\\">test1</h6><a href=\\"#\\" class=\\"dropdown-item\\" data-id=\\"1\\">test1 / test1</a><a href=\\"#\\" class=\\"dropdown-item active\\" data-id=\\"2\\">test2 / test2</a>
      </div>
    </div>
  </div>
      </div>
    <pre><code>This is a basic example: <span data-user-content=\\"PUBLIC_DSN\\">https://test2@sentry.io/test2</span></code></pre>
      <pre><code>This example should not be wrapped</code></pre><code>
    </code></main><code>
  

  
</code>"
`;

exports[`UserContentUI .init user.didUpdate 1`] = `
"
  
  

  
    <title>This is a new document</title>
  

  
    <main>
      <div data-hide-when-logged-in=\\"\\" class=\\"d-none\\">This should be hidden after page load</div>
      
      <div class=\\"py-1 px-2 text-white\\" data-user-content-switcher=\\"\\">
        <small>Showing<span class=\\"d-none d-sm-inline\\"> configuration for</span></small>
        <div data-user-content-switcher-mount=\\"\\">
    <div class=\\"dropdown\\">
      <a class=\\"dropdown-toggle\\" href=\\"#\\" role=\\"button\\" data-toggle=\\"dropdown\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-not-dynamic=\\"\\">
        test2 / test2
      </a>

      <div class=\\"dropdown-menu user-content-menu\\" aria-hidden=\\"true\\">
      <h6 class=\\"dropdown-header\\">test1</h6><a href=\\"#\\" class=\\"dropdown-item\\" data-id=\\"1\\">test1 / test1</a><a href=\\"#\\" class=\\"dropdown-item active\\" data-id=\\"2\\">test2 / test2</a>
      </div>
    </div>
  </div>
      </div>
    <pre><code>This is a basic example: <span data-user-content=\\"PUBLIC_DSN\\">https://test2@sentry.io/test2</span></code></pre>
      <pre><code>This example should not be wrapped</code></pre><code>
    </code></main><code>
  

  
</code>"
`;
